Basics of navigation bar

--- a/index.html
+++ b/index.html
@@ -13,10 +13,9 @@
         <nav class="navigation">
             <img id="nav-logo" src="res/img/logo-default-group-en.svg" alt="">
             <ul class="nav-items">
-                <li class="nav-item"><a class="nav-link" href=""></a>About Us</li>
-                <li class="nav-item"><a class="nav-link" href=""></a>Career</li>
-                <li class="nav-item"><a href=""></a></li>
-                <li class="nav-item"><p>Departments</p></li>
+                <li class="nav-item"><a class="nav-link" href="#">About Us</a></li>
+                <li class="nav-item"><a class="nav-link" href="#">Career</a></li>
+                <li class="nav-item"><p class="nav-link">Departments</p></li>
             </ul>
         </nav>
     </header>
