Docplanner Home page

--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
  </div>
 
  <div class="last-section">
-    <p class="last-prgph">Sounds interesting? Join us now!</p>
+    <p class="section-text">Sounds interesting? Join us now!</p>
     <button class="last-btn">SEE ALL CURRENT OPENINGS</button>
  </div>
 
